# exmpl

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
_build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  tests
_build/Testing/Temporary/: CTestCostData.txt
ci/travis/: install-linux.sh
include/: app.hpp
my_memcpy/: my_memcpy.sln
my_memcpy/my_memcpy/: my_memcpy.cpp  my_memcpy.vcxproj  my_memcpy.vcxproj.filters
my_memcpy/my_memcpy/Release/: my_memcpy.pchi
my_memcpy/my_memcpy/Release/my_memcpy.tlog/: icl.command.1.tlog  icl.read.1.tlog  icl.write.1.tlog  my_memcpy.lastbuildstate  xilink-link-rc.read.1.tlog  xilink-link-rc.write.1.tlog  xilink.command.1.tlog  xilink.read.1.tlog  xilink.write.1.tlog
my_memcpy/my_memcpy/x64/Release/: my_memcpy.pchi
my_memcpy/my_memcpy/x64/Release/my_memcpy.tlog/: icl.command.1.tlog  icl.read.1.tlog  icl.write.1.tlog  my_memcpy.lastbuildstate  xilink-link-rc.read.1.tlog  xilink-link-rc.write.1.tlog  xilink.command.1.tlog  xilink.read.1.tlog  xilink.write.1.tlog
source/: source.cpp
tests/: test.cpp
